Most Recent Update

--- a/scss/_01-base/_typography.scss
+++ b/scss/_01-base/_typography.scss
@@ -1,9 +1,10 @@
 body {
     font-family: $base-sans-font;
     line-height: $base-line-height;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: $base-font-color;
     font-weight: 400;
+    -webkit-font-smoothing: antialiased;
 }
 
 %headings {
@@ -21,12 +22,11 @@ h1, h2, h3, h4, h5, h6 {
     -ms-hyphens: auto;
     -o-hyphens: auto;
     hyphens: auto;
-    text-transform: uppercase;
 }
 
 // mobile
 $h1: 2.5 * $base-font-size;
-$h2: 1.075 * $base-font-size;
+$h2: 2 * $base-font-size;
 $h3: 0.95 * $base-font-size;
 $h4: 0.9 * $base-font-size;
 $h5: 0.875 * $base-font-size;
@@ -41,7 +41,8 @@ h1 {
 
 h2 {
     font-size: $h2;
-    letter-spacing: 1.7px;
+    letter-spacing: 1.1px;
+    line-height: 1.1;
 }
 
 h3 {
