--- a/scss/_06-utils/_color-palette.scss
+++ b/scss/_06-utils/_color-palette.scss
@@ -8,7 +8,21 @@ $color: (
 	dark: 			#000000,
 );
 
+$brown:(
+	light:			#f2efe9,
+	dark:			#a97031,
+);
 
+$blue:(
+	dark:			#1b3941,
+);
+
+$red:(
+	main:			#ee5643,
+
+);
+
+$black: map-get($blue, dark);
 // -----------------------------------------------------------------------------
 // Social Icons
 // -----------------------------------------------------------------------------
