--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,16 +3,16 @@
   '_07-vendors/neat/neat';
 
 @import
+  '_06-utils/color-palette',
   '_06-utils/variables',
-  '_06-utils/mixins',
-  '_06-utils/color-palette';
+  '_06-utils/mixins';
 
 @import
   '_01-base/reset',
   '_01-base/typography',
   '_01-base/base';
 
-@import '_03-layout/to-delete';
+// @import '_03-layout/to-delete';
 
 @import
   '_03-layout/navigation',
@@ -21,9 +21,19 @@
   '_03-layout/forms';
 
 @import
+  '_02-components/bg--color',
+  '_02-components/block--header-social',
+  '_02-components/block--search-modal', 
   '_02-components/buttons',
+  '_02-components/color',
+  '_02-components/display',
+  '_02-components/flex',
+  '_02-components/font--utils',
   '_02-components/grid',
   '_02-components/icons',
+  '_02-components/margin',
+  '_02-components/section--home-region',
+  '_02-components/section--home-visit',
   '_02-components/spacing';
 
 @import
