--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: Buscemi
- * Description: buscemi startup theme
- * Author: joshre
+ * Theme Name: Placer Wine
+ * Description: Website theme for Placer Wine, designed and developed by Honey Agency
+ * Author: joshre @ honeyagency
 */
