--- a/scss/_02-components/_grid.scss
+++ b/scss/_02-components/_grid.scss
@@ -1,11 +1,15 @@
+
+$gutter: $grid;
+// this variable is in variables
+
 .grid--one {
     flex-basis: 100%;
     width: 100%;
 }
 
 .grid--four-fifths {
-    flex-basis: calc(100% / 1.25 - .2em);
-    width: calc(100% / 1.25 - .2em);
+    flex-basis: calc(100% / 1.25 - (.2em * #{$gutter}));
+    width: calc(100% / 1.25 - (.2em * #{$gutter}));
 
     &.nog {
         flex-basis: calc(100% /  1.25);
@@ -14,8 +18,8 @@
 }
 
 .grid--three-fourths {
-    flex-basis: calc(75% - .25em);
-    width: calc(75% - .25em);
+    flex-basis: calc(75% - (.25em * #{$gutter}));
+    width: calc(75% - (.25em * #{$gutter}));
 
     &.nog {
         flex-basis: 75%;
@@ -24,8 +28,8 @@
 }
 
 .grid--two-thirds {
-    flex-basis: calc(100% / 1.5 - .3333333em);
-    width: calc(100% / 1.5 - .3333333em);
+    flex-basis: calc(100% / 1.5 - (.3333333em * #{$gutter}));
+    width: calc(100% / 1.5 - (.3333333em * #{$gutter}));
 
     &.nog {
         flex-basis: calc(100% / 1.5);
@@ -34,8 +38,8 @@
 }
 
 .grid--half {
-    flex-basis: calc(100% / 2 - .5em);
-    width: calc(100% / 2 - .5em);
+    flex-basis: calc(100% / 2 - (.5em * #{$gutter}));
+    width: calc(100% / 2 - (.5em * #{$gutter}));
 
     &.nog {
         flex-basis: calc(100% / 2);
@@ -43,9 +47,29 @@
     }
 }
 
+.grid--two-fifths {
+    flex-basis: calc(100% / 2.5 - (.6em * #{$gutter}));
+    width: calc(100% / 2.5 - (.6em * #{$gutter}));
+
+    &.nog {
+        flex-basis: calc(100% /  2.5);
+        width: calc(100% /  2.5);
+    }
+}
+
+.grid--three-fifths {
+    flex-basis: calc(100% / 1.666666 - (.4em * #{$gutter}));
+    width: calc(100% / 1.666666 - (.4em * #{$gutter}));
+
+    &.nog {
+        flex-basis: calc(100% /  1.666666);
+        width: calc(100% /  1.666666);
+    }
+}
+
 .grid--third {
-    flex-basis: calc(100% / 3 - .6666666em);
-    width: calc(100% / 3 - .6666666em);
+    flex-basis: calc(100% / 3 - (.6666666em * #{$gutter}));
+    width: calc(100% / 3 - (.6666666em * #{$gutter}));
 
     &.nog {
         flex-basis: calc(100% / 3);
@@ -54,8 +78,8 @@
 }
 
 .grid--fourth {
-    flex-basis: calc(100% / 4 - .75em);
-    width: calc(100% / 4 - .75em);
+    flex-basis: calc(100% / 4 - (.75em * #{$gutter}));
+    width: calc(100% / 4 - (.75em * #{$gutter}));
 
     &.nog {
         flex-basis: calc(100% / 4);
@@ -64,12 +88,42 @@
 }
 
 .grid--fifth {
-    flex-basis: calc(100% / 5 - .8em);
-    width: calc(100% / 5 - .8em);
+    flex-basis: calc(100% / 5 - (.8em * #{$gutter}));
+    width: calc(100% / 5 - (.8em * #{$gutter}));
 
     &.nog {
         flex-basis: calc(100% / 5);
         width: calc(100% / 5);
+    }
+}
+
+.grid--sixth {
+    flex-basis: calc(100% / 6 - (.85em * #{$gutter}));
+    width: calc(100% / 6 - (.85em * #{$gutter}));
+
+    &.nog {
+        flex-basis: calc(100% / 6);
+        width: calc(100% / 6);
+    }
+}
+
+.grid--ninth {
+    flex-basis: calc(100% / 9 - (.55em * #{$gutter}));
+    width: calc(100% / 9 - (.55em * #{$gutter}));
+
+    &.nog {
+        flex-basis: calc(100% / 9);
+        width: calc(100% / 9);
+    }
+}
+
+.grid--tenth {
+    flex-basis: calc(100% / 10 - (.55em * #{$gutter}));
+    width: calc(100% / 10 - (.55em * #{$gutter}));
+
+    &.nog {
+        flex-basis: calc(100% / 10);
+        width: calc(100% / 10);
     }
 }
 
@@ -80,8 +134,8 @@
     }
 
     .grid--xs-four-fifths {
-        flex-basis: calc(100% / 1.25 - .2em);
-        width: calc(100% / 1.25 - .2em);
+        flex-basis: calc(100% / 1.25 - (.2em * #{$gutter}));
+        width: calc(100% / 1.25 - (.2em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% /  1.25);
@@ -90,8 +144,8 @@
     }
 
     .grid--xs-three-fourths {
-        flex-basis: calc(75% - .25em);
-        width: calc(75% - .25em);
+        flex-basis: calc(75% - (.25em * #{$gutter}));
+        width: calc(75% - (.25em * #{$gutter}));
 
         &.nog {
             flex-basis: 75%;
@@ -100,8 +154,8 @@
     }
 
     .grid--xs-two-thirds {
-        flex-basis: calc(100% / 1.5 - .3333333em);
-        width: calc(100% / 1.5 - .3333333em);
+        flex-basis: calc(100% / 1.5 - (.3333333em * #{$gutter}));
+        width: calc(100% / 1.5 - (.3333333em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 1.5);
@@ -110,8 +164,8 @@
     }
 
     .grid--xs-half {
-        flex-basis: calc(100% / 2 - .5em);
-        width: calc(100% / 2 - .5em);
+        flex-basis: calc(100% / 2 - (.5em * #{$gutter}));
+        width: calc(100% / 2 - (.5em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 2);
@@ -119,9 +173,19 @@
         }
     }
 
+    .grid--xs-two-fifths {
+        flex-basis: calc(100% / 2.5 - (.6em * #{$gutter}));
+        width: calc(100% / 2.5 - (.6em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% /  2.5);
+            width: calc(100% /  2.5);
+        }
+    }
+
     .grid--xs-third {
-        flex-basis: calc(100% / 3 - .6666666em);
-        width: calc(100% / 3 - .6666666em);
+        flex-basis: calc(100% / 3 - (.6666666em * #{$gutter}));
+        width: calc(100% / 3 - (.6666666em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 3);
@@ -130,8 +194,8 @@
     }
 
     .grid--xs-fourth {
-        flex-basis: calc(100% / 4 - .75em);
-        width: calc(100% / 4 - .75em);
+        flex-basis: calc(100% / 4 - (.75em * #{$gutter}));
+        width: calc(100% / 4 - (.75em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 4);
@@ -140,12 +204,42 @@
     }
 
     .grid--xs-fifth {
-        flex-basis: calc(100% / 5 - .8em);
-        width: calc(100% / 5 - .8em);
+        flex-basis: calc(100% / 5 - (.8em * #{$gutter}));
+        width: calc(100% / 5 - (.8em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 5);
             width: calc(100% / 5);
+        }
+    }
+
+    .grid--xs-sixth {
+        flex-basis: calc(100% / 6 - (.85em * #{$gutter}));
+        width: calc(100% / 6 - (.85em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 6);
+            width: calc(100% / 6);
+        }
+    }
+
+    .grid--xs-ninth {
+        flex-basis: calc(100% / 9 - (.55em * #{$gutter}));
+        width: calc(100% / 9 - (.55em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 9);
+            width: calc(100% / 9);
+        }
+    }
+
+    .grid--xs-tenth {
+        flex-basis: calc(100% / 10 - (.55em * #{$gutter}));
+        width: calc(100% / 10 - (.55em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 10);
+            width: calc(100% / 10);
         }
     }
 }
@@ -158,8 +252,8 @@
     }
 
     .grid--sm-four-fifths {
-        flex-basis: calc(100% / 1.25 - .2em);
-        width: calc(100% / 1.25 - .2em);
+        flex-basis: calc(100% / 1.25 - (.2em * #{$gutter}));
+        width: calc(100% / 1.25 - (.2em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% /  1.25);
@@ -168,8 +262,8 @@
     }
 
     .grid--sm-three-fourths {
-        flex-basis: calc(75% - .25em);
-        width: calc(75% - .25em);
+        flex-basis: calc(75% - (.25em * #{$gutter}));
+        width: calc(75% - (.25em * #{$gutter}));
 
         &.nog {
             flex-basis: 75%;
@@ -178,8 +272,8 @@
     }
 
     .grid--sm-two-thirds {
-        flex-basis: calc(100% / 1.5 - .3333333em);
-        width: calc(100% / 1.5 - .3333333em);
+        flex-basis: calc(100% / 1.5 - (.3333333em * #{$gutter}));
+        width: calc(100% / 1.5 - (.3333333em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 1.5);
@@ -188,8 +282,8 @@
     }
 
     .grid--sm-half {
-        flex-basis: calc(100% / 2 - .5em);
-        width: calc(100% / 2 - .5em);
+        flex-basis: calc(100% / 2 - (.5em * #{$gutter}));
+        width: calc(100% / 2 - (.5em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 2);
@@ -197,9 +291,19 @@
         }
     }
 
+    .grid--sm-three-fifths {
+        flex-basis: calc(100% / 1.666666 - (.4em * #{$gutter}));
+        width: calc(100% / 1.666666 - (.4em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% /  1.666666);
+            width: calc(100% /  1.666666);
+        }
+    }
+
     .grid--sm-two-fifths {
-        flex-basis: calc(100% / 2.5 - .6em);
-        width: calc(100% / 2.5 - .6em);
+        flex-basis: calc(100% / 2.5 - (.6em * #{$gutter}));
+        width: calc(100% / 2.5 - (.6em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% /  2.5);
@@ -208,8 +312,8 @@
     }
 
     .grid--sm-third {
-        flex-basis: calc(100% / 3 - .6666666em);
-        width: calc(100% / 3 - .6666666em);
+        flex-basis: calc(100% / 3 - (.6666666em * #{$gutter}));
+        width: calc(100% / 3 - (.6666666em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 3);
@@ -218,8 +322,8 @@
     }
 
     .grid--sm-fourth {
-        flex-basis: calc(100% / 4 - .75em);
-        width: calc(100% / 4 - .75em);
+        flex-basis: calc(100% / 4 - (.75em * #{$gutter}));
+        width: calc(100% / 4 - (.75em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 4);
@@ -228,12 +332,52 @@
     }
 
     .grid--sm-fifth {
-        flex-basis: calc(100% / 5 - .8em);
-        width: calc(100% / 5 - .8em);
+        flex-basis: calc(100% / 5 - (.8em * #{$gutter}));
+        width: calc(100% / 5 - (.8em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 5);
             width: calc(100% / 5);
+        }
+    }
+
+    .grid--sm-sixth {
+        flex-basis: calc(100% / 6 - (.85em * #{$gutter}));
+        width: calc(100% / 6 - (.85em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 6);
+            width: calc(100% / 6);
+        }
+    }
+
+    .grid--sm-seventh {
+        flex-basis: calc(100% / 7 - (.8em * #{$gutter}));
+        width: calc(100% / 7- (.8em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 7);
+            width: calc(100% / 7);
+        }
+    }
+
+    .grid--sm-ninth {
+        flex-basis: calc(100% / 9 - (.55em * #{$gutter}));
+        width: calc(100% / 9 - (.55em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 9);
+            width: calc(100% / 9);
+        }
+    }
+
+    .grid--sm-tenth {
+        flex-basis: calc(100% / 10 - (.55em * #{$gutter}));
+        width: calc(100% / 10 - (.55em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 10);
+            width: calc(100% / 10);
         }
     }
 }
@@ -246,8 +390,8 @@
     }
 
     .grid--md-four-fifths {
-        flex-basis: calc(100% / 1.25 - .2em);
-        width: calc(100% / 1.25 - .2em);
+        flex-basis: calc(100% / 1.25 - (.2em * #{$gutter}));
+        width: calc(100% / 1.25 - (.2em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% /  1.25);
@@ -256,8 +400,8 @@
     }
 
     .grid--md-three-fourths {
-        flex-basis: calc(75% - .25em);
-        width: calc(75% - .25em);
+        flex-basis: calc(75% - (.25em * #{$gutter}));
+        width: calc(75% - (.25em * #{$gutter}));
 
         &.nog {
             flex-basis: 75%;
@@ -266,8 +410,8 @@
     }
 
     .grid--md-two-thirds {
-        flex-basis: calc(100% / 1.5 - .3333333em);
-        width: calc(100% / 1.5 - .3333333em);
+        flex-basis: calc(100% / 1.5 - (.3333333em * #{$gutter}));
+        width: calc(100% / 1.5 - (.3333333em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 1.5);
@@ -275,9 +419,19 @@
         }
     }
 
+    .grid--md-three-fifths {
+        flex-basis: calc(100% / 1.666666 - (.4em * #{$gutter}));
+        width: calc(100% / 1.666666 - (.4em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% /  1.666666);
+            width: calc(100% /  1.666666);
+        }
+    }
+
     .grid--md-half {
-        flex-basis: calc(100% / 2 - .5em);
-        width: calc(100% / 2 - .5em);
+        flex-basis: calc(100% / 2 - (.5em * #{$gutter}));
+        width: calc(100% / 2 - (.5em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 2);
@@ -285,9 +439,19 @@
         }
     }
 
+    .grid--md-two-fifths {
+        flex-basis: calc(100% / 2.5 - (.6em * #{$gutter}));
+        width: calc(100% / 2.5 - (.6em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% /  2.5);
+            width: calc(100% /  2.5);
+        }
+    }
+
     .grid--md-third {
-        flex-basis: calc(100% / 3 - .6666666em);
-        width: calc(100% / 3 - .6666666em);
+        flex-basis: calc(100% / 3 - (.6666666em * #{$gutter}));
+        width: calc(100% / 3 - (.6666666em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 3);
@@ -296,8 +460,8 @@
     }
 
     .grid--md-fourth {
-        flex-basis: calc(100% / 4 - .75em);
-        width: calc(100% / 4 - .75em);
+        flex-basis: calc(100% / 4 - (.75em * #{$gutter}));
+        width: calc(100% / 4 - (.75em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 4);
@@ -306,12 +470,42 @@
     }
 
     .grid--md-fifth {
-        flex-basis: calc(100% / 5 - .8em);
-        width: calc(100% / 5 - .8em);
+        flex-basis: calc(100% / 5 - (.8em * #{$gutter}));
+        width: calc(100% / 5 - (.8em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 5);
             width: calc(100% / 5);
+        }
+    }
+
+    .grid--md-sixth {
+        flex-basis: calc(100% / 6 - (.85em * #{$gutter}));
+        width: calc(100% / 6 - (.85em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 6);
+            width: calc(100% / 6);
+        }
+    }
+
+    .grid--md-ninth {
+        flex-basis: calc(100% / 9 - (.55em * #{$gutter}));
+        width: calc(100% / 9 - (.55em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 9);
+            width: calc(100% / 9);
+        }
+    }
+
+    .grid--md-tenth {
+        flex-basis: calc(100% / 10 - (.55em * #{$gutter}));
+        width: calc(100% / 10 - (.55em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 10);
+            width: calc(100% / 10);
         }
     }
 }
@@ -324,8 +518,8 @@
     }
 
     .grid--lg-four-fifths {
-        flex-basis: calc(100% / 1.25 - .2em);
-        width: calc(100% / 1.25 - .2em);
+        flex-basis: calc(100% / 1.25 - (.2em * #{$gutter}));
+        width: calc(100% / 1.25 - (.2em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% /  1.25);
@@ -334,8 +528,8 @@
     }
 
     .grid--lg-three-fourths {
-        flex-basis: calc(75% - .25em);
-        width: calc(75% - .25em);
+        flex-basis: calc(75% - (.25em * #{$gutter}));
+        width: calc(75% - (.25em * #{$gutter}));
 
         &.nog {
             flex-basis: 75%;
@@ -344,8 +538,8 @@
     }
 
     .grid--lg-two-thirds {
-        flex-basis: calc(100% / 1.5 - .3333333em);
-        width: calc(100% / 1.5 - .3333333em);
+        flex-basis: calc(100% / 1.5 - (.3333333em * #{$gutter}));
+        width: calc(100% / 1.5 - (.3333333em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 1.5);
@@ -353,9 +547,19 @@
         }
     }
 
+    .grid--lg-three-fifths {
+        flex-basis: calc(100% / 1.666666 - (.4em * #{$gutter}));
+        width: calc(100% / 1.666666 - (.4em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% /  1.666666);
+            width: calc(100% /  1.666666);
+        }
+    }
+
     .grid--lg-half {
-        flex-basis: calc(100% / 2 - .5em);
-        width: calc(100% / 2 - .5em);
+        flex-basis: calc(100% / 2 - (.5em * #{$gutter}));
+        width: calc(100% / 2 - (.5em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 2);
@@ -364,8 +568,8 @@
     }
 
     .grid--lg-two-fifths {
-        flex-basis: calc(100% / 2.5 - .6em);
-        width: calc(100% / 2.5 - .6em);
+        flex-basis: calc(100% / 2.5 - (.6em * #{$gutter}));
+        width: calc(100% / 2.5 - (.6em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% /  2.5);
@@ -374,8 +578,8 @@
     }
 
     .grid--lg-third {
-        flex-basis: calc(100% / 3 - .6666666em);
-        width: calc(100% / 3 - .6666666em);
+        flex-basis: calc(100% / 3 - (.6666666em * #{$gutter}));
+        width: calc(100% / 3 - (.6666666em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 3);
@@ -384,8 +588,8 @@
     }
 
     .grid--lg-fourth {
-        flex-basis: calc(100% / 4 - .75em);
-        width: calc(100% / 4 - .75em);
+        flex-basis: calc(100% / 4 - (.75em * #{$gutter}));
+        width: calc(100% / 4 - (.75em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 4);
@@ -394,12 +598,32 @@
     }
 
     .grid--lg-fifth {
-        flex-basis: calc(100% / 5 - .8em);
-        width: calc(100% / 5 - .8em);
+        flex-basis: calc(100% / 5 - (.8em * #{$gutter}));
+        width: calc(100% / 5 - (.8em * #{$gutter}));
 
         &.nog {
             flex-basis: calc(100% / 5);
             width: calc(100% / 5);
+        }
+    }
+
+    .grid--lg-sixth {
+        flex-basis: calc(100% / 6 - (.85em * #{$gutter}));
+        width: calc(100% / 6 - (.85em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 6);
+            width: calc(100% / 6);
+        }
+    }
+
+    .grid--lg-ninth {
+        flex-basis: calc(100% / 9 - (.55em * #{$gutter}));
+        width: calc(100% / 9 - (.55em * #{$gutter}));
+
+        &.nog {
+            flex-basis: calc(100% / 9);
+            width: calc(100% / 9);
         }
     }
 }
