--- a/scss/_06-utils/_variables.scss
+++ b/scss/_06-utils/_variables.scss
@@ -1,6 +1,6 @@
-$link-color: #4aa4ff;
 
-$default-font: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif !default;
+
+$default-font: "europa", -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif !default;
 
 $base-serif-font:$default-font;
 $base-sans-font:$default-font;
@@ -23,6 +23,13 @@ $base-line-height: 1.6;
 
 $base-border-radius: 8px;
 $gr:1.610833;
+
+$max-wrap: 1320px;
+
+$base-cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
+
+
+$link-color: map-get($red, main);
 
 //
 // Media Queries & Breakpoints
@@ -47,7 +54,11 @@ $screen-xl:                  map-get($max-width, xl) !default;
 $screen-xs-max:              ($screen-xs - 1) !default;
 $screen-sm-max:              ($screen-sm - 1) !default;
 $screen-md-max:              ($screen-md - 1) !default;
+$screen-lg-max:              ($screen-lg - 1) !default;
 
 $max-xs:  new-breakpoint(max-width $screen-xs-max 12);
 $max-sm: new-breakpoint(max-width $screen-sm-max 12);
 $max-md:  new-breakpoint(max-width $screen-md-max  6);
+$max-lg:  new-breakpoint(max-width $screen-lg-max  6);
+
+$grid: 1.4;
