--- a/views/base.twig
+++ b/views/base.twig
@@ -4,13 +4,12 @@
 	{% endblock %}
 </head>
 {% endblock %}
-<body class="{{body_class}}" data-template="base.twig">
-<header class="header">
+<body class="{{body_class}} bg--brown-light" data-template="base.twig">
+
 	{% block header %}
-		<a class="hdr-logo-link" href="/" rel="home">{{site.name}}</a>
-		{% include 'components/navigation.twig' %}
+		{% include 'components/header.twig' %}
 	{% endblock %}
-</header>
+
 <main role="main" class="content-wrapper">
 	{% if title %}<h1>{{title}}</h1>{% endif %}
 		{% block content %}
