--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -20,3 +20,5 @@
     <link rel="pingback" href="{{site.pingback_url}}" />
     {{function('wp_head')}}
     {% include 'components/grunticon.twig' %}
+    {% include 'components/typekit.twig' %}
+
