--- a/app/icons/icons.fallback.css
+++ b/app/icons/icons.fallback.css
@@ -2,6 +2,8 @@
 
 .icon-i80 { background-image: url('app/icons/i80.png'); background-repeat: no-repeat; }
 
+.icon-logo-tab { background-image: url('app/icons/logo-tab.png'); background-repeat: no-repeat; }
+
 .icon-logo { background-image: url('app/icons/logo.png'); background-repeat: no-repeat; }
 
 .icon-social--facebook { background-image: url('app/icons/social--facebook.png'); background-repeat: no-repeat; }
