--- a/scss/_02-components/_flex.scss
+++ b/scss/_02-components/_flex.scss
@@ -32,8 +32,15 @@
     align-items: start;
 }
 
+.align--items-end {
+    align-items: flex-end;
+}
 .align--items-center {
     align-items: center;
+}
+
+.align--items-baseline {
+    align-items: baseline;
 }
 
 // 
