--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,9 @@
   '_02-components/grid',
   '_02-components/icons',
   '_02-components/margin',
+  '_02-components/section--footer-signup',
+  '_02-components/section--home-events',
+  '_02-components/section--home-explore',
   '_02-components/section--home-region',
   '_02-components/section--home-visit',
   '_02-components/spacing';
