--- a/scss/_01-base/_typography.scss
+++ b/scss/_01-base/_typography.scss
@@ -2,7 +2,7 @@ body {
     font-family: $base-sans-font;
     line-height: $base-line-height;
     font-size: 1rem;
-    color: $base-font-color;
+    color: $black;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
 }
@@ -34,7 +34,7 @@ $h6: 0.7 * $base-font-size;
 
 h1 {
     font-size: $h1;
-    letter-spacing: 2px;
+
     line-height: 1.1;
     margin-bottom: 0.2em;
 }
@@ -47,7 +47,7 @@ h2 {
 
 h3 {
     font-size: 0.85em;
-    letter-spacing: 1.6px;
+
 }
 
 h4 {
