--- a/scss/_02-components/_margin.scss
+++ b/scss/_02-components/_margin.scss
@@ -40,3 +40,9 @@
 .margin--bot-2{margin-bottom: 2em * $grid;}
 .margin--bot-3{margin-bottom: 3em * $grid;}
 .margin--bot-4{margin-bottom: 4em * $grid;}
+
+
+
+.mar--no{
+    margin: 0 !important;
+}
