--- a/views/components/navigation.twig
+++ b/views/components/navigation.twig
@@ -1,23 +1,19 @@
-<nav role="navigation" class="text--center">
-	<ul class="flex flex--wrap justify--center">
+<nav role="navigation" class="text--center main-nav grid--half align--items-end spacing--vert-1">
+	<ul class="flex flex--wrap justify--center mar--no align--items-center">
 		{% for item in menu.get_items %}
-			<li class="nav-item {{item.classes | join(' ')}} grid--one grid--sm-third">
-				{% set navtext = item.title|split(' ') %}
-				<a class="nav-link color--blue font--bold font--large" href="{{item.get_link}}">
-					{% for text in navtext %}
-						{% if loop.last %}<br><span class="font--larger">{{text}}</span>{% else %}{{text}}{% endif %}
-					{% endfor %}
-				</a>
+			<li class="nav-item {{item.classes | join(' ')}} ">
+				<a class="nav-link color--blue font--bold font--large" href="{{item.get_link}}">{{item.title}}</a>
 				{% if item.get_children %}
-					<ul class="nav nav-drop">
+					<ul class="nav nav-drop mar--no">
 						{% for child in item.get_children %}
-							<li class="nav-drop-item">
-								<a class="nav-link" href="{{child.get_link}}">{{child.title}}</a>
+							<li class="nav-drop-item bg--brown-light">
+								<a class="nav-link color--black font--bold font--large" href="{{child.get_link}}">{{child.title}}</a>
 							</li>
 						{% endfor %}
 					</ul>
 				{% endif %}
 			</li>
+			{% if loop.last %}{% else %}<span>|</span>{% endif %}
 		{% endfor %}
 	</ul>
 </nav>
