--- a/views/page.twig
+++ b/views/page.twig
@@ -1,6 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
+	{% include 'components/blocks/block--breadcrumbs.twig' %}
 		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 			<section class="article-content">
 				<h1 class="article-h1">{{post.title}}</h1>
