--- a/scss/_02-components/_bg--color.scss
+++ b/scss/_02-components/_bg--color.scss
@@ -6,6 +6,10 @@
     background-color: map-get($brown, dark);
 }
 
+.bg--brown-faded {
+    background-color: map-get($brown, faded);
+}
+
 .bg--blue, .bg--black {
     background-color: map-get($blue, dark);
 }
