--- a/scss/_02-components/_icons.scss
+++ b/scss/_02-components/_icons.scss
@@ -40,3 +40,12 @@
         width: 100%;
     }
 }
+
+.icon-corkscrew {
+    width: 50px;
+    height: 50px;
+
+    svg {
+        width: 100%;
+    }
+}
