--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,7 @@
 
 @import
   '_02-components/bg--color',
+  '_02-components/block--breadcrumbs',
   '_02-components/block--header-social',
   '_02-components/block--search-modal', 
   '_02-components/buttons',
@@ -32,11 +33,17 @@
   '_02-components/grid',
   '_02-components/icons',
   '_02-components/margin',
+  '_02-components/section--child-blocks',
   '_02-components/section--footer-signup',
   '_02-components/section--home-events',
   '_02-components/section--home-explore',
   '_02-components/section--home-region',
   '_02-components/section--home-visit',
+  '_02-components/section--winery-amenities',
+  '_02-components/section--winery-aside',
+  '_02-components/section--winery-content',
+  '_02-components/section--winery-list',
+  '_02-components/section--winery-press',
   '_02-components/spacing';
 
 @import
