--- a/views/page-explore-our-wineries.twig
+++ b/views/page-explore-our-wineries.twig
@@ -6,6 +6,6 @@
 		<section class="section--page-header spacing--vert-2">
 			<h1 class="article-h1 text--center">{{post.title}}</h1>
 		</section>
-			{{post.content}}
+		{% include 'components/sections/section--winery-list.twig' %}
 	</article>
 {% endblock %}
