--- a/static/icons/final/icons.fallback.css
+++ b/static/icons/final/icons.fallback.css
@@ -1,5 +1,7 @@
 .icon-close { background-image: url('app/icons/close.png'); background-repeat: no-repeat; }
 
+.icon-corkscrew { background-image: url('app/icons/corkscrew.png'); background-repeat: no-repeat; }
+
 .icon-i80 { background-image: url('app/icons/i80.png'); background-repeat: no-repeat; }
 
 .icon-logo-tab { background-image: url('app/icons/logo-tab.png'); background-repeat: no-repeat; }
