--- a/views/page-parent.twig
+++ b/views/page-parent.twig
@@ -1,11 +1,10 @@
 {% extends "base.twig" %}
-
 {% block content %}
 	{% include 'components/blocks/block--breadcrumbs.twig' %}
-		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
+	<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
 		<section class="section--page-header spacing--vert-2">
 			<h1 class="article-h1 text--center">{{post.title}}</h1>
 		</section>
-			{{post.content}}
+		{% include 'components/sections/section--child-blocks.twig' %}
 	</article>
 {% endblock %}
