--- a/views/page-home.twig
+++ b/views/page-home.twig
@@ -7,5 +7,5 @@
 	{% include 'components/sections/section--home-region.twig' %}
 	{% include 'components/sections/section--home-explore.twig' %}
 	{% include 'components/sections/section--home-events.twig' %}
-	
+	<iframe src="https://snazzymaps.com/embed/24003" width="100%" height="600px" style="border:none;"></iframe>
 {% endblock %}
