--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,7 @@
   '_02-components/section--winery-aside',
   '_02-components/section--winery-content',
   '_02-components/section--winery-list',
+  '_02-components/section--winery-map',
   '_02-components/section--winery-press',
   '_02-components/spacing';
 
