Internals & Responsive Winery pages

--- a/scss/_01-base/_typography.scss
+++ b/scss/_01-base/_typography.scss
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // mobile
 $h1: 2.25 * $base-font-size;
-$h2: 2 * $base-font-size;
+$h2: 1.5 * $base-font-size;
 $h3: 0.95 * $base-font-size;
 $h4: 0.9 * $base-font-size;
 $h5: 0.875 * $base-font-size;
@@ -41,7 +41,7 @@ h1 {
 
 h2 {
     font-size: $h2;
-    letter-spacing: 1.1px;
+    letter-spacing: 0;
     line-height: 1.1;
 }
 
