--- a/scss/_02-components/_section--winery-content.scss
+++ b/scss/_02-components/_section--winery-content.scss
@@ -4,3 +4,8 @@
         height: auto;
     }
 }
+  @include media($max-sm) {
+      .press--img, .award--img {
+            display: none;
+        }
+    }
