--- a/views/components/sections/section--winery-press.twig
+++ b/views/components/sections/section--winery-press.twig
@@ -1,6 +1,6 @@
-<section class="section--winery-press grid--one flex flex--wrap justify--between align--items-start border--1 spacing--vert-2">
-	<h2 class="grid--one grid--two-fifths font--standard color--brown-dark">Press</h2>
-	<div class="border--grid grid--one grid--three-fifths flex flex--wrap justify--between">
+<section class="section--winery-press grid--one flex flex--wrap justify--between align--items-start border--1 spacing--vert-1 spacing--dsk-vert-2">
+	<h2 class="grid--one grid--sm-fourth font--standard color--brown-dark">Press</h2>
+	<div class="border--grid grid--one grid--sm-three-fourths flex flex--wrap justify--between">
 		{# {{winery.deets|print_r}} #}
 		<div class="block--press font--medium">
 			{% for press in winery.deets.press %}
