--- a/views/single-winery.twig
+++ b/views/single-winery.twig
@@ -2,11 +2,11 @@
 {% block content %}
 <section class="section--single-header spacing--gutter margin--center max-wrap"><img src="{{post.thumbnail}}" width="100%"></section>
 {% include 'components/blocks/block--breadcrumbs.twig' %}
-<article class="flex flex--wrap justify--between align--items-start spacing--dsk-vert-4 winery-wrap margin--center">
+<article class="flex flex--wrap justify--between align--items-start spacing--dsk-vert-4 winery-wrap margin--center spacing--gutter">
 	{% include 'components/sections/section--winery-aside.twig' %}
 	{% include 'components/sections/section--winery-content.twig' %}
 </article>
-<aside class="section--winery-awards-deets spacing--gutter winery-wrap margin--center">
+<aside class="section--winery-awards-deets spacing--gutter winery-wrap margin--center spacing--vert-1 spacing--dsk-vert-0">
 	{% if winery.deets.amenities %}{% include 'components/sections/section--winery-amenities.twig' %}{% endif %}
 	{% if winery.deets.press %}{% include 'components/sections/section--winery-press.twig' %}{% endif %}
 	{% if winery.deets.awards %}{% include 'components/sections/section--winery-awards.twig' %}{% endif %}
