--- a/scss/_02-components/_section--winery-list.scss
+++ b/scss/_02-components/_section--winery-list.scss
@@ -8,6 +8,15 @@
 }
 
 .winery--details, .border--grid {
-    border-bottom: 1px solid map-get($brown, dark);
-    padding-bottom: 2em;
+    border-top: 1px solid map-get($brown, dark);
+    padding-top: 1em;
+    margin-top: 1em;
+
+    @include media($screen-sm) {
+        padding-top: 0;
+        margin-top: 0;
+        border-top: 0;
+        border-bottom: 1px solid map-get($brown, dark);
+        padding-bottom: 4em;
+    }
 }
