--- a/scss/_02-components/_spacing.scss
+++ b/scss/_02-components/_spacing.scss
@@ -8,6 +8,7 @@
 .spacing--vert-6{padding-top:6em * $grid; padding-bottom: 6em * $grid;}
 
 @include media($screen-sm) {
+	.spacing--dsk-vert-0{padding-top:0em; padding-bottom: 0em;}
 	.spacing--dsk-vert-1{padding-top:1em * $grid; padding-bottom: 1em * $grid;}
 	.spacing--dsk-vert-2{padding-top:2em * $grid; padding-bottom: 2em * $grid;}
 	.spacing--dsk-vert-3{padding-top:3em * $grid; padding-bottom: 3em * $grid;}
@@ -25,6 +26,7 @@
 .spacing--horiz-6{padding-left:6em * $grid; padding-right: 6em * $grid;}
 
 @include media($screen-sm) {
+	.spacing--dsk-horiz-0{padding-left:0em; padding-right: 0em;}
 	.spacing--dsk-horiz-1{padding-left:1em * $grid; padding-right: 1em * $grid;}
 	.spacing--dsk-horiz-2{padding-left:2em * $grid; padding-right: 2em * $grid;}
 	.spacing--dsk-horiz-3{padding-left:3em * $grid; padding-right: 3em * $grid;}
