--- a/views/components/sections/section--winery-amenities.twig
+++ b/views/components/sections/section--winery-amenities.twig
@@ -1,9 +1,9 @@
-<section class="section--winery-amenities grid--one flex flex--wrap justify--between align--items-start border--1 spacing--vert-2">
-	<h2 class="grid--one grid--two-fifths font--standard color--brown-dark">Amenities</h2>
-	<div class="border--grid grid--one grid--three-fifths flex flex--wrap justify--between">
+<section class="section--winery-amenities grid--one flex flex--wrap justify--between align--items-start border--1 spacing--vert-1 spacing--dsk-vert-2">
+	<h2 class="grid--one grid--sm-fourth font--standard color--brown-dark">Amenities</h2>
+	<div class="border--grid grid--one grid--sm-three-fourths dsk--flex flex--wrap justify--between">
 		<i class="icon-corkscrew inline-block" data-grunticon-embed></i>
 		<div class="block--amenities font--medium">
-			{% for amenity in winery.deets.amenities %}<span class="inline-block">{{amenity.name}}</span>{% if loop.last %}{% else %}<span class="spacing--horiz-half"> | </span>{% endif %}{% endfor %}
+			{% for amenity in winery.deets.amenities %}<span class="inline-block">{{amenity.name}}</span>{% if loop.last %}{% else %}<span class="spacing--horiz-half divider"> | </span>{% endif %}{% endfor %}
 		</div>
 	</div>
 </section>
