--- a/scss/_02-components/_icons.scss
+++ b/scss/_02-components/_icons.scss
@@ -1,6 +1,14 @@
 .hdr-logo-link {
     i {
-        max-width: 200px;
+        position: relative;
+        z-index: 9999;
+        max-width: 120px;
+
+        @include media($screen-sm) {
+            max-width: 200px;
+        }
+
+
         display: inline-block;
 
         svg {
@@ -13,10 +21,13 @@
     .hdr-logo-link {
         i {
             display: block;
-            margin-left: 2em;
             position: relative;
             bottom: -3em;
             margin-top: -3em;
+
+            @include media($screen-sm) {
+                margin-left: 2em;
+            }
         }
     }
 }
