--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@
   '_02-components/grid',
   '_02-components/icons',
   '_02-components/margin',
+  '_02-components/mobile--nav',
   '_02-components/section--child-blocks',
   '_02-components/section--footer-signup',
   '_02-components/section--home-events',
