--- a/scss/_02-components/_icons.scss
+++ b/scss/_02-components/_icons.scss
@@ -23,10 +23,13 @@
             display: block;
             position: relative;
             bottom: -3em;
-            margin-top: -3em;
+            margin-top: -3.2em;
+            margin-bottom: 0.2em;
 
             @include media($screen-sm) {
                 margin-left: 2em;
+                margin-top: -3em;
+                margin-bottom: 0;
             }
         }
     }
